fix : JwtAuthentication
## 수정 사항
JwtAuthentication에 ROLE추가